// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|Forms/Input default 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="input-field"
  >
    <input
      className="input-field__input input-field__input--full-width"
      disabled={false}
      onChange={[Function]}
      placeholder="My input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Forms/Input disabled 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="input-field"
  >
    <input
      className="input-field__input input-field__input--full-width input-field__input--disabled"
      disabled={true}
      onChange={[Function]}
      placeholder="My email"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Forms/Input fixed width 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="input-field"
    style={
      Object {
        "width": "200px",
      }
    }
  >
    <input
      className="input-field__input"
      disabled={false}
      onChange={[Function]}
      placeholder="My input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Forms/Input with error 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="input-field"
  >
    <span
      className="input-field__error"
    >
      Email is required
    </span>
    <input
      className="input-field__input input-field__input--full-width input-field__input--error"
      disabled={false}
      onChange={[Function]}
      placeholder="My email"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Forms/Input with error and label 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="input-field"
  >
    <label
      className="input-field__label input-field__label--hide"
    >
      My email
    </label>
    <span
      className="input-field__error"
    >
      Email is required
    </span>
    <input
      className="input-field__input input-field__input--full-width input-field__input--error"
      disabled={false}
      onChange={[Function]}
      placeholder="My email"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Forms/Input with label 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="input-field"
  >
    <label
      className="input-field__label input-field__label--hide"
    >
      My input
    </label>
    <input
      className="input-field__input input-field__input--full-width"
      disabled={false}
      onChange={[Function]}
      placeholder="My input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Forms/Input with warning 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="input-field"
  >
    <span
      className="input-field__warning"
    >
      Did you mean johndoe@gmail.com?
    </span>
    <input
      className="input-field__input input-field__input--full-width input-field__input--warning"
      disabled={false}
      onChange={[Function]}
      placeholder="My email"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Forms/Input without placeholder 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="input-field"
  >
    <input
      className="input-field__input input-field__input--full-width"
      disabled={false}
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;
